--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
 		"publish:patch": "npm version patch",
 		"preversion": "npm run check-outdated",
 		"postversion": "git push && git push --tags && npm publish",
-		"check-outdated": "node check-outdated.js --ignore-pre-releases"
+		"check-outdated": "check-outdated --ignore-pre-releases"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "4.11.1",
-		"@typescript-eslint/parser": "4.11.1",
+		"@typescript-eslint/eslint-plugin": "4.12.0",
+		"@typescript-eslint/parser": "4.12.0",
 		"check-outdated": "2.5.0",
-		"eslint": "7.16.0",
-		"eslint-plugin-functional": "3.2.0",
+		"eslint": "7.17.0",
+		"eslint-plugin-functional": "3.2.1",
 		"eslint-plugin-import": "2.22.1",
 		"eslint-plugin-jest": "24.1.3",
 		"eslint-plugin-node": "11.1.0",
