--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,9 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = false
 
+[*.json]
+insert_final_newline = false
+
 [*.{yaml,yml}]
 indent_style = space
 indent_size = 2
