--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
 		"publish:major": "npm version major",
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
+		"lint": "node ./lint ts & node ./lint md & node ./lint audit",
 		"preversion": "npm run check-outdated",
 		"postversion": "git push && git push --tags && npm publish",
 		"check-outdated": "check-outdated --ignore-pre-releases"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "4.14.0",
-		"@typescript-eslint/parser": "4.14.0",
+		"@typescript-eslint/eslint-plugin": "4.14.1",
+		"@typescript-eslint/parser": "4.14.1",
 		"check-outdated": "2.5.0",
 		"eslint": "7.18.0",
 		"eslint-plugin-functional": "3.2.1",
@@ -57,6 +58,9 @@
 		"stylelint-use-nesting": "3.0.0"
 	},
 	"peerDependencies": {
+		"typescript": "^4.1.3"
+	},
+	"devDependencies": {
 		"typescript": "4.1.3"
 	}
 }
