--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	"bin": {
 		"lint": "lint.js"
 	},
+	"engines": {
+		"node": ">=12.0.0"
+	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/jens-duttke/linter-bundle.git"
