--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
 		"check-outdated": "check-outdated --ignore-pre-releases --ignore-packages eslint@7.19.0"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "4.16.1",
-		"@typescript-eslint/parser": "4.16.1",
+		"@typescript-eslint/eslint-plugin": "4.17.0",
+		"@typescript-eslint/parser": "4.17.0",
 		"check-outdated": "2.5.1",
 		"eslint": "7.21.0",
 		"eslint-plugin-functional": "3.2.1",
 		"eslint-plugin-import": "2.22.1",
-		"eslint-plugin-jest": "24.1.7",
+		"eslint-plugin-jest": "24.1.9",
 		"eslint-plugin-jsx-a11y": "6.4.1",
 		"eslint-plugin-node": "11.1.0",
 		"eslint-plugin-react": "7.22.0",
@@ -64,6 +64,7 @@
 		"typescript": "4.2.3"
 	},
 	"devDependencies": {
+		"@types/eslint": "7.2.7",
 		"typescript": "4.2.3"
 	}
 }
