Ensure that the linter-bundle rules are also applied in VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
 	"errorLens.gutterIconSet": "circle",
 	"errorLens.followCursor": "activeLine",
 	"eslint.options": {
-		"configFile": "./.eslintrc.js"
+		"configFile": "./.eslintrc.js",
+		"rulePath": ["./eslint/rules"],
+		"reportUnusedDisableDirectives": "error",
 	},
 	"files.associations": {
 		"*.json": "jsonc",
