--- a/package.json
+++ b/package.json
@@ -38,17 +38,17 @@
 		"check-outdated": "check-outdated --ignore-pre-releases --ignore-packages eslint@7.19.0"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "4.19.0",
-		"@typescript-eslint/parser": "4.19.0",
-		"better-npm-audit": "1.8.0",
-		"eslint": "7.22.0",
+		"@typescript-eslint/eslint-plugin": "4.22.0",
+		"@typescript-eslint/parser": "4.22.0",
+		"better-npm-audit": "1.8.1",
+		"eslint": "7.24.0",
 		"eslint-plugin-functional": "3.2.1",
 		"eslint-plugin-import": "2.22.1",
-		"eslint-plugin-jest": "24.3.2",
+		"eslint-plugin-jest": "24.3.5",
 		"eslint-plugin-jsdoc": "32.3.0",
 		"eslint-plugin-jsx-a11y": "6.4.1",
 		"eslint-plugin-node": "11.1.0",
-		"eslint-plugin-react": "7.22.0",
+		"eslint-plugin-react": "7.23.2",
 		"eslint-plugin-react-hooks": "4.2.0",
 		"eslint-plugin-unicorn": "29.0.0",
 		"improved-yarn-audit": "2.3.2",
@@ -58,7 +58,7 @@
 		"stylelint-high-performance-animation": "1.5.2",
 		"stylelint-order": "4.1.0",
 		"stylelint-scss": "3.19.0",
-		"stylelint-selector-no-empty": "1.0.7",
+		"stylelint-selector-no-empty": "1.0.8",
 		"stylelint-use-logical-spec": "3.2.0",
 		"stylelint-use-nesting": "3.0.0"
 	},
@@ -66,8 +66,9 @@
 		"typescript": "^4.0.0"
 	},
 	"devDependencies": {
-		"@types/eslint": "7.2.7",
-		"check-outdated": "2.6.0",
-		"typescript": "4.2.3"
+		"@types/eslint": "7.2.9",
+		"@types/node": "14.14.37",
+		"check-outdated": "2.7.0",
+		"typescript": "4.2.4"
 	}
 }
