--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"stylelint-order": "4.1.0",
 		"stylelint-scss": "3.19.0",
 		"stylelint-selector-no-empty": "1.0.8",
+		"stylelint-selector-tag-no-without-class": "2.0.3",
 		"stylelint-use-logical-spec": "3.2.0",
 		"stylelint-use-nesting": "3.0.0"
 	},
@@ -68,6 +69,7 @@
 	"devDependencies": {
 		"@types/eslint": "7.2.10",
 		"@types/node": "14.14.41",
+		"@types/stylelint": "9.10.1",
 		"check-outdated": "2.7.0",
 		"typescript": "4.2.4"
 	}
