--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
 		"lint": "node ./lint tsc ts md audit",
-		"preversion": "npm run check-outdated && npm run lint",
+		"preversion": "npm run check-outdated && npm run stylelint-find-rules && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
+		"stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
 		"check-outdated": "check-outdated --ignore-pre-releases --ignore-packages eslint@7.19.0"
 	},
 	"dependencies": {
@@ -71,6 +72,7 @@
 		"@types/node": "14.14.41",
 		"@types/stylelint": "9.10.1",
 		"check-outdated": "2.7.0",
+		"stylelint-find-new-rules": "^3.0.1",
 		"typescript": "4.2.4"
 	}
 }
