--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
 		"@typescript-eslint/parser": "4.22.0",
 		"better-npm-audit": "1.8.1",
 		"eslint": "7.25.0",
+		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-functional": "3.2.1",
 		"eslint-plugin-import": "2.22.1",
 		"eslint-plugin-jest": "24.3.6",
 		"eslint-plugin-jsdoc": "33.0.0",
 		"eslint-plugin-jsx-a11y": "6.4.1",
 		"eslint-plugin-node": "11.1.0",
+		"eslint-plugin-promise": "5.1.0",
 		"eslint-plugin-react": "7.23.2",
 		"eslint-plugin-react-hooks": "4.2.0",
 		"eslint-plugin-unicorn": "31.0.0",
