Downgrade `eslint-plugin-import` from v2.23.2 to v2.22.1

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"preversion": "npm run check-outdated && npm run stylelint-find-rules && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
 		"stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
-		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases --ignore-packages eslint@7.19.0"
+		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases --ignore-packages eslint@7.19.0,eslint-plugin-import@2.23.2"
 	},
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "4.23.0",
@@ -45,7 +45,7 @@
 		"eslint": "7.26.0",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-functional": "3.2.1",
-		"eslint-plugin-import": "2.23.2",
+		"eslint-plugin-import": "2.22.1",
 		"eslint-plugin-jest": "24.3.6",
 		"eslint-plugin-jsdoc": "34.6.0",
 		"eslint-plugin-jsx-a11y": "6.4.1",
