--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
 		"preversion": "npm run check-outdated && npm run stylelint-find-rules && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
 		"stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
-		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases --ignore-packages eslint@7.19.0,eslint-plugin-import@2.23.2"
+		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
 	},
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "4.24.0",
 		"@typescript-eslint/parser": "4.24.0",
 		"better-npm-audit": "1.9.1",
-		"eslint": "7.26.0",
+		"eslint": "7.27.0",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-functional": "3.2.1",
-		"eslint-plugin-import": "2.22.1",
+		"eslint-plugin-import": "2.23.3",
 		"eslint-plugin-jest": "24.3.6",
-		"eslint-plugin-jsdoc": "34.7.0",
+		"eslint-plugin-jsdoc": "34.8.2",
 		"eslint-plugin-jsx-a11y": "6.4.1",
 		"eslint-plugin-node": "11.1.0",
 		"eslint-plugin-promise": "5.1.0",
@@ -70,8 +70,8 @@
 		"typescript": "^4.0.0"
 	},
 	"devDependencies": {
-		"@types/eslint": "7.2.10",
-		"@types/node": "15.3.0",
+		"@types/eslint": "7.2.11",
+		"@types/node": "15.6.0",
 		"@types/stylelint": "9.10.1",
 		"stylelint-find-new-rules": "^3.0.1",
 		"typescript": "4.2.4"
