--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"@typescript-eslint/eslint-plugin": "4.26.0",
 		"@typescript-eslint/parser": "4.26.0",
 		"eslint": "7.27.0",
-		"eslint-import-resolver-typescript": "^2.4.0",
+		"eslint-import-resolver-typescript": "2.4.0",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-functional": "3.2.1",
 		"eslint-plugin-import": "2.23.4",
@@ -72,7 +72,7 @@
 		"@types/eslint": "7.2.13",
 		"@types/node": "15.6.2",
 		"@types/stylelint": "13.13.0",
-		"stylelint-find-new-rules": "^3.0.1",
+		"stylelint-find-new-rules": "3.0.1",
 		"typescript": "4.3.2"
 	}
 }
