--- a/package.json
+++ b/package.json
@@ -41,19 +41,20 @@
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "4.26.0",
 		"@typescript-eslint/parser": "4.26.0",
-		"eslint": "7.27.0",
+		"eslint": "7.28.0",
 		"eslint-import-resolver-typescript": "2.4.0",
+		"eslint-import-resolver-webpack": "0.13.1",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-functional": "3.2.1",
 		"eslint-plugin-import": "2.23.4",
 		"eslint-plugin-jest": "24.3.6",
-		"eslint-plugin-jsdoc": "35.1.2",
+		"eslint-plugin-jsdoc": "35.1.3",
 		"eslint-plugin-jsx-a11y": "6.4.1",
 		"eslint-plugin-node": "11.1.0",
 		"eslint-plugin-promise": "5.1.0",
 		"eslint-plugin-react": "7.24.0",
 		"eslint-plugin-react-hooks": "4.2.0",
-		"eslint-plugin-unicorn": "33.0.0",
+		"eslint-plugin-unicorn": "33.0.1",
 		"markdownlint-cli": "0.27.1",
 		"stylelint": "13.13.1",
 		"stylelint-declaration-block-no-ignored-properties": "2.3.0",
@@ -70,7 +71,7 @@
 	},
 	"devDependencies": {
 		"@types/eslint": "7.2.13",
-		"@types/node": "15.6.2",
+		"@types/node": "15.12.1",
 		"@types/stylelint": "13.13.0",
 		"stylelint-find-new-rules": "3.0.1",
 		"typescript": "4.3.2"
