Activate new TS4.4 options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
 		"alwaysStrict": true,
+		"exactOptionalPropertyTypes": true,
 		"forceConsistentCasingInFileNames": true,
 		"keyofStringsOnly": false,
 		"noFallthroughCasesInSwitch": true,
@@ -35,7 +36,8 @@
 		"strictNullChecks": true,
 		"strictPropertyInitialization": true,
 		"suppressExcessPropertyErrors": false,
-		"suppressImplicitAnyIndexErrors": true
+		"suppressImplicitAnyIndexErrors": true,
+		"useUnknownInCatchVariables": true
 	},
     "include": [
 		"./types.d.ts",
