--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
 		"eslint-plugin-jest": "25.2.3",
 		"eslint-plugin-jsdoc": "37.0.3",
 		"eslint-plugin-node": "11.1.0",
-		"eslint-plugin-unicorn": "38.0.0",
 		"eslint-plugin-react-hooks": "4.2.1-alpha-13455d26d-20211104",
+		"eslint-plugin-unicorn": "38.0.0",
 		"markdownlint-cli": "0.29.0",
+		"postcss-scss": "4.0.2",
 		"stylelint": "14.0.1",
 		"stylelint-order": "5.0.0",
 		"stylelint-scss": "4.0.0",
