--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
 		"lint": "node ./lint tsc ts md audit --min-severity=critical",
-		"preversion": "npm run check-outdated && npm run stylelint-find-rules && npm run lint",
+		"preversion": "npm run check-outdated && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
 		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
 	},
