--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
 		"lint": "node ./lint tsc ts md audit --min-severity=critical",
-		"preversion": "npm run check-outdated && npm run lint",
+		"preversion": "npm run check-outdated && npm run stylelint-find-rules && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
+		"stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
 		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
 	},
 	"dependencies": {
@@ -60,11 +61,13 @@
 		"stylelint-use-logical-spec": "3.2.2"
 	},
 	"peerDependencies": {
-		"typescript": "^4.0.0"
+		"typescript": "^4.0.0",
+		"postcss-value-parser": "*"
 	},
 	"devDependencies": {
 		"@types/eslint": "7.28.2",
 		"@types/node": "16.11.6",
+		"stylelint-find-new-rules": "^3.0.4",
 		"typescript": "4.4.4"
 	}
 }
