--- a/package.json
+++ b/package.json
@@ -39,24 +39,28 @@
 		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "5.3.0",
-		"@typescript-eslint/parser": "5.3.0",
-		"eslint": "8.2.0",
+		"@typescript-eslint/eslint-plugin": "5.10.1",
+		"@typescript-eslint/parser": "5.10.1",
+		"eslint": "8.7.0",
 		"eslint-import-resolver-typescript": "2.5.0",
 		"eslint-import-resolver-webpack": "0.13.2",
 		"eslint-plugin-eslint-comments": "3.2.0",
-		"eslint-plugin-functional": "4.0.2",
-		"eslint-plugin-import": "2.25.2",
-		"eslint-plugin-jest": "25.2.3",
-		"eslint-plugin-jsdoc": "37.0.3",
+		"eslint-plugin-functional": "4.1.1",
+		"eslint-plugin-import": "2.25.4",
+		"eslint-plugin-jest": "26.0.0",
+		"eslint-plugin-jsdoc": "37.7.0",
+		"eslint-plugin-jsx-a11y": "6.5.1",
 		"eslint-plugin-node": "11.1.0",
-		"eslint-plugin-react-hooks": "4.2.1-alpha-13455d26d-20211104",
-		"eslint-plugin-unicorn": "38.0.0",
-		"markdownlint-cli": "0.29.0",
-		"postcss-scss": "4.0.2",
-		"stylelint": "14.0.1",
+		"eslint-plugin-promise": "6.0.0",
+		"eslint-plugin-react": "7.28.0",
+		"eslint-plugin-react-hooks": "4.3.0",
+		"eslint-plugin-unicorn": "40.1.0",
+		"markdownlint-cli": "0.30.0",
+		"postcss-scss": "4.0.3",
+		"stylelint": "14.3.0",
+		"stylelint-declaration-block-no-ignored-properties": "2.5.0",
 		"stylelint-order": "5.0.0",
-		"stylelint-scss": "4.0.0",
+		"stylelint-scss": "4.1.0",
 		"stylelint-selector-no-empty": "1.0.8",
 		"stylelint-use-logical-spec": "3.2.2"
 	},
@@ -65,9 +69,9 @@
 		"postcss-value-parser": "*"
 	},
 	"devDependencies": {
-		"@types/eslint": "7.28.2",
-		"@types/node": "16.11.6",
+		"@types/eslint": "8.4.1",
+		"@types/node": "17.0.12",
 		"stylelint-find-new-rules": "^3.0.4",
-		"typescript": "4.4.4"
+		"typescript": "4.5.5"
 	}
 }
