--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"eslint-plugin-react-hooks": "4.3.0",
 		"eslint-plugin-unicorn": "41.0.0",
 		"markdownlint-cli": "0.31.1",
+		"micromatch": "4.0.4",
 		"postcss-scss": "4.0.3",
 		"stylelint": "14.5.1",
 		"stylelint-declaration-block-no-ignored-properties": "2.5.0",
@@ -65,13 +66,14 @@
 		"stylelint-use-logical-spec": "3.2.2"
 	},
 	"peerDependencies": {
-		"typescript": "^4.0.0",
-		"postcss-value-parser": "*"
+		"postcss-value-parser": "*",
+		"typescript": "^4.0.0"
 	},
 	"devDependencies": {
 		"@types/eslint": "8.4.1",
+		"@types/micromatch": "4.0.2",
 		"@types/node": "17.0.18",
-		"stylelint-find-new-rules": "^3.0.4",
+		"stylelint-find-new-rules": "3.0.4",
 		"typescript": "4.5.5"
 	}
 }
