--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
 		"publish:major": "npm version major",
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
-		"lint": "node ./lint tsc ts md audit --min-severity=critical",
+		"lint": "npm run validate-stylelint-options && node ./lint tsc ts md audit --min-severity=critical",
 		"preversion": "npm run check-outdated && npm run stylelint-find-rules && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
 		"stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
+		"validate-stylelint-options": "node ./validate-stylelint-options",
 		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "5.21.0",
-		"@typescript-eslint/parser": "5.21.0",
+		"@typescript-eslint/eslint-plugin": "5.22.0",
+		"@typescript-eslint/parser": "5.22.0",
 		"eslint": "8.14.0",
 		"eslint-import-resolver-typescript": "2.7.1",
 		"eslint-import-resolver-webpack": "0.13.2",
@@ -48,17 +49,17 @@
 		"eslint-plugin-functional": "4.2.1",
 		"eslint-plugin-import": "2.26.0",
 		"eslint-plugin-jest": "26.1.5",
-		"eslint-plugin-jsdoc": "39.2.8",
+		"eslint-plugin-jsdoc": "39.2.9",
 		"eslint-plugin-jsx-a11y": "6.5.1",
 		"eslint-plugin-node": "11.1.0",
 		"eslint-plugin-promise": "6.0.0",
 		"eslint-plugin-react": "7.29.4",
-		"eslint-plugin-react-hooks": "4.4.0",
+		"eslint-plugin-react-hooks": "4.5.0",
 		"eslint-plugin-unicorn": "42.0.0",
 		"markdownlint-cli": "0.31.1",
 		"micromatch": "4.0.5",
 		"postcss-scss": "4.0.4",
-		"stylelint": "14.7.1",
+		"stylelint": "14.8.2",
 		"stylelint-declaration-block-no-ignored-properties": "2.5.0",
 		"stylelint-order": "5.0.0",
 		"stylelint-scss": "4.2.0",
@@ -70,10 +71,10 @@
 		"typescript": "^4.0.0"
 	},
 	"devDependencies": {
-		"@types/eslint": "8.4.1",
+		"@types/eslint": "8.4.2",
 		"@types/micromatch": "4.0.2",
-		"@types/node": "17.0.27",
+		"@types/node": "17.0.31",
 		"stylelint-find-new-rules": "4.0.0",
-		"typescript": "4.6.3"
+		"typescript": "4.6.4"
 	}
 }
