--- a/package.json
+++ b/package.json
@@ -40,20 +40,21 @@
 		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "5.36.1",
-		"@typescript-eslint/parser": "5.36.1",
-		"eslint": "8.23.0",
-		"eslint-import-resolver-typescript": "3.5.0",
+		"@typescript-eslint/eslint-plugin": "5.37.0",
+		"@typescript-eslint/parser": "5.37.0",
+		"@typescript-eslint/utils": "5.37.0",
+		"eslint": "8.23.1",
+		"eslint-import-resolver-typescript": "3.5.1",
 		"eslint-import-resolver-webpack": "0.13.2",
 		"eslint-plugin-eslint-comments": "3.2.0",
-		"eslint-plugin-functional": "4.2.2",
+		"eslint-plugin-functional": "4.3.1",
 		"eslint-plugin-import": "2.26.0",
-		"eslint-plugin-jest": "27.0.1",
+		"eslint-plugin-jest": "27.0.4",
 		"eslint-plugin-jsdoc": "39.3.6",
 		"eslint-plugin-jsx-a11y": "6.6.1",
 		"eslint-plugin-node": "11.1.0",
 		"eslint-plugin-promise": "6.0.1",
-		"eslint-plugin-react": "7.31.1",
+		"eslint-plugin-react": "7.31.8",
 		"eslint-plugin-react-hooks": "4.6.0",
 		"eslint-plugin-unicorn": "43.0.2",
 		"markdownlint-cli": "0.32.2",
@@ -73,8 +74,8 @@
 	"devDependencies": {
 		"@types/eslint": "8.4.6",
 		"@types/micromatch": "4.0.2",
-		"@types/node": "18.7.14",
+		"@types/node": "18.7.18",
 		"stylelint-find-new-rules": "4.0.0",
-		"typescript": "4.8.2"
+		"typescript": "4.8.3"
 	}
 }
