--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
 		"eslint-plugin-jest": "27.0.4",
 		"eslint-plugin-jsdoc": "39.3.6",
 		"eslint-plugin-jsx-a11y": "6.6.1",
-		"eslint-plugin-node": "11.1.0",
+		"eslint-plugin-n": "15.3.0",
 		"eslint-plugin-promise": "6.0.1",
 		"eslint-plugin-react": "7.31.8",
 		"eslint-plugin-react-hooks": "4.6.0",
