Update eslint dependency

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
 		"publish:major": "npm version major",
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
-		"lint": "npm run validate-stylelint-options && node ./lint tsc ts md audit --min-severity=critical",
-		"preversion": "npm run check-outdated && npm run stylelint-find-rules && npm run lint",
+		"lint": "npm run validate-stylelint-options && npm run stylelint-find-rules && node ./lint tsc ts md audit --min-severity=critical",
+		"preversion": "npm run check-outdated && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
 		"stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
 		"validate-stylelint-options": "node ./validate-stylelint-options",
@@ -43,7 +43,7 @@
 		"@typescript-eslint/eslint-plugin": "5.59.0",
 		"@typescript-eslint/parser": "5.59.0",
 		"@typescript-eslint/utils": "5.59.0",
-		"eslint": "8.38.0",
+		"eslint": "8.39.0",
 		"eslint-import-resolver-typescript": "3.5.5",
 		"eslint-import-resolver-webpack": "0.13.2",
 		"eslint-plugin-eslint-comments": "3.2.0",
