--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"lint": "lint.js"
 	},
 	"engines": {
-		"node": ">=16.0.0"
+		"node": "^16.0.0 || >=18.0.0"
 	},
 	"repository": {
 		"type": "git",
