--- a/package.json
+++ b/package.json
@@ -40,21 +40,21 @@
 		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "6.2.0",
-		"@typescript-eslint/parser": "6.2.0",
-		"@typescript-eslint/utils": "6.2.0",
-		"eslint": "8.45.0",
-		"eslint-import-resolver-typescript": "3.5.5",
-		"eslint-import-resolver-webpack": "0.13.2",
+		"@typescript-eslint/eslint-plugin": "6.3.0",
+		"@typescript-eslint/parser": "6.3.0",
+		"@typescript-eslint/utils": "6.3.0",
+		"eslint": "8.47.0",
+		"eslint-import-resolver-typescript": "3.6.0",
+		"eslint-import-resolver-webpack": "0.13.4",
 		"eslint-plugin-eslint-comments": "3.2.0",
-		"eslint-plugin-functional": "5.0.8",
+		"eslint-plugin-functional": "6.0.0",
 		"eslint-plugin-import": "2.28.0",
 		"eslint-plugin-jest": "27.2.3",
-		"eslint-plugin-jsdoc": "46.4.5",
+		"eslint-plugin-jsdoc": "46.4.6",
 		"eslint-plugin-jsx-a11y": "6.7.1",
 		"eslint-plugin-n": "16.0.1",
 		"eslint-plugin-promise": "6.1.1",
-		"eslint-plugin-react": "7.33.0",
+		"eslint-plugin-react": "7.33.1",
 		"eslint-plugin-react-hooks": "4.6.0",
 		"eslint-plugin-unicorn": "48.0.1",
 		"markdownlint-cli": "0.35.0",
@@ -63,17 +63,17 @@
 		"stylelint": "15.10.2",
 		"stylelint-declaration-block-no-ignored-properties": "2.7.0",
 		"stylelint-order": "6.0.3",
-		"stylelint-scss": "5.0.1",
+		"stylelint-scss": "5.1.0",
 		"stylelint-use-logical-spec": "5.0.0"
 	},
 	"peerDependencies": {
 		"postcss-value-parser": "*",
-		"typescript": "^4.0.0"
+		"typescript": ">=4.0.0"
 	},
 	"devDependencies": {
-		"@types/eslint": "8.44.1",
+		"@types/eslint": "8.44.2",
 		"@types/micromatch": "4.0.2",
-		"@types/node": "20.4.5",
+		"@types/node": "20.4.9",
 		"stylelint-find-new-rules": "4.1.0",
 		"typescript": "5.1.6"
 	}
