--- a/package.json
+++ b/package.json
@@ -32,35 +32,35 @@
 		"publish:major": "npm version major",
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
-		"lint": "npm run validate-stylelint-options && npm run stylelint-find-rules && node ./lint tsc ts md audit --min-severity=critical",
+		"lint": "npm run _validate-stylelint-options && npm run _stylelint-find-rules && node ./lint tsc ts md audit --min-severity=critical",
 		"preversion": "npm run check-outdated && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
-		"stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
-		"validate-stylelint-options": "node ./validate-stylelint-options.mjs",
-		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases"
+		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases",
+		"_stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
+		"_validate-stylelint-options": "node ./validate-stylelint-options.mjs"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "6.3.0",
-		"@typescript-eslint/parser": "6.3.0",
-		"@typescript-eslint/utils": "6.3.0",
-		"eslint": "8.47.0",
+		"@typescript-eslint/eslint-plugin": "6.4.1",
+		"@typescript-eslint/parser": "6.4.1",
+		"@typescript-eslint/utils": "6.4.1",
+		"eslint": "8.48.0",
 		"eslint-import-resolver-typescript": "3.6.0",
-		"eslint-import-resolver-webpack": "0.13.4",
+		"eslint-import-resolver-webpack": "0.13.7",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-functional": "6.0.0",
-		"eslint-plugin-import": "2.28.0",
+		"eslint-plugin-import": "2.28.1",
 		"eslint-plugin-jest": "27.2.3",
-		"eslint-plugin-jsdoc": "46.4.6",
+		"eslint-plugin-jsdoc": "46.5.0",
 		"eslint-plugin-jsx-a11y": "6.7.1",
-		"eslint-plugin-n": "16.0.1",
+		"eslint-plugin-n": "16.0.2",
 		"eslint-plugin-promise": "6.1.1",
-		"eslint-plugin-react": "7.33.1",
+		"eslint-plugin-react": "7.33.2",
 		"eslint-plugin-react-hooks": "4.6.0",
 		"eslint-plugin-unicorn": "48.0.1",
 		"markdownlint-cli": "0.35.0",
 		"micromatch": "4.0.5",
-		"postcss-scss": "4.0.6",
-		"stylelint": "15.10.2",
+		"postcss-scss": "4.0.7",
+		"stylelint": "15.10.3",
 		"stylelint-declaration-block-no-ignored-properties": "2.7.0",
 		"stylelint-order": "6.0.3",
 		"stylelint-scss": "5.1.0",
@@ -73,8 +73,8 @@
 	"devDependencies": {
 		"@types/eslint": "8.44.2",
 		"@types/micromatch": "4.0.2",
-		"@types/node": "20.4.9",
-		"stylelint-find-new-rules": "4.1.0",
-		"typescript": "5.1.6"
+		"@types/node": "20.5.7",
+		"stylelint-find-new-rules": "4.1.1",
+		"typescript": "5.2.2"
 	}
 }
