--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
 		"publish:major": "npm version major",
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
-		"lint": "npm run _validate-stylelint-options && npm run _stylelint-find-rules && node ./lint files tsc ts md audit --min-severity=critical",
+		"lint": "npm run _test-stylelint && npm run _stylelint-find-rules && node ./lint files tsc ts md audit --min-severity=critical",
 		"preversion": "npm run check-outdated && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
 		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases",
 		"_stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.js",
-		"_validate-stylelint-options": "node ./validate-stylelint-options.mjs"
+		"_test-stylelint": "node ./test-stylelint.js"
 	},
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "6.5.0",
