--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
 	"errorLens.gutterIconSet": "circle",
 	"errorLens.followCursor": "activeLine",
 	"eslint.options": {
-		"overrideConfigFile": "./.eslintrc.js",
+		"overrideConfigFile": "./.eslintrc.cjs",
 		"rulePaths": ["./eslint/rules"],
 		"reportUnusedDisableDirectives": "error",
 	},
