--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"lint": "lint.js"
 	},
 	"engines": {
-		"node": "^16.0.0 || >=18.0.0"
+		"node": ">=18.12.0"
 	},
 	"repository": {
 		"type": "git",
@@ -41,41 +41,42 @@
 		"_test-stylelint": "node ./test-stylelint.js"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "6.5.0",
-		"@typescript-eslint/parser": "6.5.0",
-		"@typescript-eslint/utils": "6.5.0",
-		"eslint": "8.48.0",
-		"eslint-import-resolver-typescript": "3.6.0",
-		"eslint-import-resolver-webpack": "0.13.7",
+		"@typescript-eslint/eslint-plugin": "6.19.0",
+		"@typescript-eslint/parser": "6.19.0",
+		"@typescript-eslint/utils": "6.19.0",
+		"eslint": "8.56.0",
+		"eslint-import-resolver-typescript": "3.6.1",
+		"eslint-import-resolver-webpack": "0.13.8",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-functional": "6.0.0",
-		"eslint-plugin-import": "2.28.1",
-		"eslint-plugin-jest": "27.2.3",
-		"eslint-plugin-jsdoc": "46.5.1",
-		"eslint-plugin-jsx-a11y": "6.7.1",
-		"eslint-plugin-n": "16.0.2",
+		"eslint-plugin-import": "2.29.1",
+		"eslint-plugin-jest": "27.6.3",
+		"eslint-plugin-jsdoc": "48.0.2",
+		"eslint-plugin-jsx-a11y": "6.8.0",
+		"eslint-plugin-n": "16.6.2",
 		"eslint-plugin-promise": "6.1.1",
 		"eslint-plugin-react": "7.33.2",
 		"eslint-plugin-react-hooks": "4.6.0",
-		"eslint-plugin-unicorn": "48.0.1",
-		"markdownlint-cli": "0.36.0",
+		"eslint-plugin-unicorn": "50.0.1",
+		"markdownlint-cli": "0.38.0",
 		"micromatch": "4.0.5",
-		"postcss-scss": "4.0.7",
-		"stylelint": "15.10.3",
-		"stylelint-declaration-block-no-ignored-properties": "2.7.0",
-		"stylelint-order": "6.0.3",
-		"stylelint-scss": "5.1.0",
-		"stylelint-use-logical-spec": "5.0.0"
+		"postcss-scss": "4.0.9",
+		"stylelint": "16.2.0",
+		"stylelint-declaration-block-no-ignored-properties": "2.8.0",
+		"stylelint-high-performance-animation": "1.10.0",
+		"stylelint-order": "6.0.4",
+		"stylelint-scss": "6.0.0",
+		"stylelint-use-logical-spec": "5.0.1"
 	},
 	"peerDependencies": {
 		"postcss-value-parser": "*",
 		"typescript": ">=4.0.0"
 	},
 	"devDependencies": {
-		"@types/eslint": "8.44.2",
-		"@types/micromatch": "4.0.2",
-		"@types/node": "20.5.9",
-		"stylelint-find-new-rules": "4.1.2",
-		"typescript": "5.2.2"
+		"@types/eslint": "8.56.2",
+		"@types/micromatch": "4.0.6",
+		"@types/node": "20.11.5",
+		"stylelint-find-new-rules": "5.0.0",
+		"typescript": "5.3.3"
 	}
 }
