--- a/package.json
+++ b/package.json
@@ -41,32 +41,34 @@
 		"_test-stylelint": "node ./test-stylelint.js"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "8.14.0",
-		"@typescript-eslint/parser": "8.14.0",
-		"@typescript-eslint/utils": "8.14.0",
-		"eslint": "9.15.0",
-		"eslint-import-resolver-typescript": "3.6.3",
-		"eslint-import-resolver-webpack": "0.13.9",
+		"@stylistic/eslint-plugin": "4.2.0",
+		"@stylistic/eslint-plugin-jsx": "4.2.0",
+		"eslint": "9.22.0",
+		"eslint-formatter-unix": "8.40.0",
+		"eslint-import-resolver-typescript": "3.8.3",
+		"eslint-import-resolver-webpack": "0.13.10",
 		"eslint-plugin-eslint-comments": "3.2.0",
-		"eslint-plugin-functional": "7.1.0",
+		"eslint-plugin-functional": "9.0.1",
 		"eslint-plugin-import": "2.31.0",
-		"eslint-plugin-jest": "28.9.0",
-		"eslint-plugin-jsdoc": "50.5.0",
+		"eslint-plugin-jest": "28.11.0",
+		"eslint-plugin-jsdoc": "50.6.3",
 		"eslint-plugin-jsx-a11y": "6.10.2",
-		"eslint-plugin-n": "17.13.2",
-		"eslint-plugin-promise": "7.1.0",
-		"eslint-plugin-react": "7.37.2",
-		"eslint-plugin-react-hooks": "5.0.0",
-		"eslint-plugin-unicorn": "56.0.0",
-		"markdownlint-cli": "0.42.0",
+		"eslint-plugin-n": "17.16.2",
+		"eslint-plugin-promise": "7.2.1",
+		"eslint-plugin-react": "7.37.4",
+		"eslint-plugin-react-hooks": "5.2.0",
+		"eslint-plugin-unicorn": "57.0.0",
+		"globals": "16.0.0",
+		"markdownlint-cli": "0.44.0",
 		"micromatch": "4.0.8",
 		"postcss-scss": "4.0.9",
-		"stylelint": "16.10.0",
+		"stylelint": "16.15.0",
 		"stylelint-declaration-block-no-ignored-properties": "2.8.0",
-		"stylelint-high-performance-animation": "1.10.0",
+		"stylelint-high-performance-animation": "1.11.0",
 		"stylelint-order": "6.0.4",
-		"stylelint-scss": "6.9.0",
-		"stylelint-use-logical-spec": "5.0.1"
+		"stylelint-scss": "6.11.1",
+		"stylelint-use-logical-spec": "5.0.1",
+		"typescript-eslint": "8.26.0"
 	},
 	"peerDependencies": {
 		"postcss-value-parser": "*",
@@ -74,9 +76,9 @@
 	},
 	"devDependencies": {
 		"@types/eslint": "9.6.1",
-		"@types/micromatch": "4.0.7",
-		"@types/node": "20.14.2",
+		"@types/micromatch": "4.0.9",
+		"@types/node": "22.13.10",
 		"stylelint-find-new-rules": "5.0.0",
-		"typescript": "5.4.5"
+		"typescript": "5.8.2"
 	}
 }
