--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,7 +52,7 @@
 		"@todo"
 	],
 	"todo-tree.tree.labelFormat": "${after}",
-	"todo-tree.regex.regex": "((//|#|<!--|/\\*|^\\s*\\*)\\s*($TAGS))|(\"\\?(\\\\.|[^\"])+\")",
+	"todo-tree.regex.regex": "((//|#|<!--|/\\*|^\\s*\\*)\\s*($TAGS))",
 	"typescript.format.insertSpaceBeforeFunctionParenthesis": true,
 	"typescript.preferences.quoteStyle": "single",
 	"typescript.tsdk": "./node_modules/typescript/lib",
