--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,9 @@
 	"[markdown]": {
 		"editor.rulers": [300]
 	},
+	"[css]": {
+		"editor.rulers": [160]
+	},
 	"[scss]": {
 		"editor.rulers": [160]
 	},
