chore: configure copilot commit message instructions
Point GitHub Copilot's commit message generation to the shared
instruction file for consistent conventional commit formatting.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,11 @@
 	"eslint.options": {
 		"overrideConfigFile": "./eslint.config.mjs"
 	},
+	"github.copilot.chat.commitMessageGeneration.instructions": [
+        {
+            "file": ".github/shared-copilot-commit-message-instructions.md"
+        }
+    ],
 	"files.associations": {
 		"*.json": "jsonc",
 		"package.json": "json"
