--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"lint": "lint.js"
 	},
 	"engines": {
-		"node": "^20.12.0 || ^22.0.0 || >=24.0.0"
+		"node": "^20.19.0 || ^22.13.0 || >=24.0.0"
 	},
 	"repository": {
 		"type": "git",
@@ -42,33 +42,33 @@
 		"_test-stylelint": "node ./test-stylelint.js"
 	},
 	"dependencies": {
-		"@stylistic/eslint-plugin": "5.6.1",
-		"eslint": "9.39.1",
+		"@stylistic/eslint-plugin": "5.9.0",
+		"eslint": "9.39.3",
 		"eslint-formatter-unix": "9.0.1",
 		"eslint-import-resolver-typescript": "4.4.4",
 		"eslint-import-resolver-webpack": "0.13.10",
 		"eslint-plugin-eslint-comments": "3.2.0",
 		"eslint-plugin-functional": "9.0.2",
 		"eslint-plugin-import": "2.32.0",
-		"eslint-plugin-jest": "29.1.0",
-		"eslint-plugin-jsdoc": "61.3.0",
+		"eslint-plugin-jest": "29.15.0",
+		"eslint-plugin-jsdoc": "62.7.0",
 		"eslint-plugin-jsx-a11y": "6.10.2",
-		"eslint-plugin-n": "17.23.1",
+		"eslint-plugin-n": "17.24.0",
 		"eslint-plugin-promise": "7.2.1",
 		"eslint-plugin-react": "7.37.5",
 		"eslint-plugin-react-hooks": "7.0.1",
-		"eslint-plugin-unicorn": "62.0.0",
-		"globals": "16.5.0",
-		"markdownlint-cli": "0.46.0",
+		"eslint-plugin-unicorn": "63.0.0",
+		"globals": "17.3.0",
+		"markdownlint-cli": "0.47.0",
 		"micromatch": "4.0.8",
 		"postcss-scss": "4.0.9",
-		"stylelint": "16.25.0",
-		"stylelint-declaration-block-no-ignored-properties": "2.8.0",
-		"stylelint-high-performance-animation": "1.11.0",
-		"stylelint-order": "7.0.0",
-		"stylelint-scss": "6.12.1",
-		"stylelint-use-logical-spec": "5.0.1",
-		"typescript-eslint": "8.47.0"
+		"stylelint": "17.3.0",
+		"stylelint-declaration-block-no-ignored-properties": "3.0.0",
+		"stylelint-high-performance-animation": "2.0.0",
+		"stylelint-order": "7.0.1",
+		"stylelint-scss": "7.0.0",
+		"stylelint-use-logical": "2.1.3",
+		"typescript-eslint": "8.56.0"
 	},
 	"peerDependencies": {
 		"@typescript-eslint/utils": "*",
@@ -78,8 +78,8 @@
 	"devDependencies": {
 		"@types/eslint": "9.6.1",
 		"@types/micromatch": "4.0.10",
-		"@types/node": "24.10.1",
-		"stylelint-find-new-rules": "5.0.0",
+		"@types/node": "25.3.0",
+		"stylelint-find-new-rules": "6.0.0",
 		"typescript": "5.9.3"
 	}
 }
