chore: update preversion and check-outdated scripts for better checks
The preversion script now includes a check for the current user to ensure
the correct permissions before running checks. The check-outdated script
has been enhanced to include minimum age parameters for more precise
dependency management.

--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
 		"publish:minor": "npm version minor",
 		"publish:patch": "npm version patch",
 		"lint": "npm run _test-stylelint && npm run _stylelint-find-rules && node ./lint files tsc ts md audit --min-severity=critical",
-		"preversion": "npm run check-outdated && npm run lint",
+		"preversion": "npm whoami && npm run check-outdated && npm run lint",
 		"postversion": "git push && git push --tags && npm publish",
-		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases",
+		"check-outdated": "npx --yes -- check-outdated --ignore-pre-releases --min-age 30 --min-age-patch 1",
 		"_stylelint-find-rules": "stylelint-find-new-rules ./stylelint/index.mjs",
 		"_test-stylelint": "node ./test-stylelint.js"
 	},
